adding cloudinary resizing to avoid showing whole image

--- a/.github/workflows/archive.yml
+++ b/.github/workflows/archive.yml
@@ -22,7 +22,7 @@ jobs:
       
       - run: node scripts/archive.js
         env:
-          CLOUDINARY_CLOUD_NAME: ${{ secrets.CLOUDINARY_CLOUD_NAME }}
+          PUBLIC_CLOUDINARY_CLOUD_NAME: ${{ secrets.PUBLIC_CLOUDINARY_CLOUD_NAME }}
           CLOUDINARY_API_KEY: ${{ secrets.CLOUDINARY_API_KEY }}
           CLOUDINARY_API_SECRET: ${{ secrets.CLOUDINARY_API_SECRET }}
       
